--- a/certificate.html
+++ b/certificate.html
@@ -3,10 +3,11 @@
 
 <head>
   <meta charset="utf-8">
-  <title>ODITEL — компьютерные сети, видеонаблюдение, электрика, озвучка, охранка</title>
+  <title>ODITEL | Сертификаты и лицинзии</title>
   <meta name="Description" content="ODITEL на рынке с 1996г. Компьютерные сети, АТС, видеонаблюдение, электрика, охранная и пожарная сигнализация любой сложности.">
   <meta name="Keywords" content="АТС, видеонаблюдение, скс, сименс, siemens, автоматы, автоматизаця, диспечеризация, электрика, дкс, dkc, legrand, gewiss, розетки, выключатели, щитовое оборудование, гофра, умный дом, монтажные работы, проектные работы, проектирование, сигнализация, охранка, пожарка, монтаж, кабель, провод, компьютерные сети, телефония, озвучка, аудиоконтроль, оповещение, управление доступом">
-  <link rel="icon" href="images/old_telephone.png">
+  <link rel="icon" href="http://www.oditel.odessa.ua/images/favicon.png" type="image/png">
+  <link rel="shortcut icon" href="http://www.oditel.odessa.ua/images/favicon.png" type="image/png">
   <link href='https://fonts.googleapis.com/css?family=Roboto+Condensed:400,700&subset=latin,cyrillic' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" type="text/css" href="css/style.css">
   <link rel="stylesheet" type="text/css" href="css/coin-slider.css">
@@ -96,7 +97,7 @@
     </div>
     <div class="footer">
       <div class="footer_resize">
-        <p class="rf">Based on <a target="_blank" href="http://www.free-css.com/">Free CSS Templates</a> By <a target="_blank" href="http://www.dreamtemplate.com/">DreamTemplate</a></p>
+        <p class="rf">Based on <a target="_blank" href="http://www.free-css.com/" rel="nofollow">Free CSS Templates</a> By <a target="_blank" href="http://www.dreamtemplate.com/" rel="nofollow">DreamTemplate</a></p>
         <div style="clear:both;"></div>
       </div>
     </div>
